<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_iv"
        android:layout_width="@dimen/main_iv_size"
        android:layout_height="@dimen/main_iv_size"
        android:src="@drawable/horse0"
        android:layout_margin="@dimen/main_view_margin"
        android:transitionName="@string/main_to_anim_7_iv_transition_name"/>

    <Button
        android:id="@+id/main_btn_to_anim_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_1_text"/>
    <Button
        android:id="@+id/main_btn_to_anim_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_2_text"/>
    <Button
        android:id="@+id/main_btn_to_anim_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_3_text"/>
    <Button
        android:id="@+id/main_btn_to_anim_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_4_text"/>
    <Button
        android:id="@+id/main_btn_to_anim_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_5_text"/>
    <Button
        android:id="@+id/main_btn_to_anim_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_6_text"/>
    <Button
        android:id="@+id/main_btn_to_anim_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_7_text"
        android:transitionName="@string/main_to_anim_7_btn_transition_name"/>
    <Button
        android:id="@+id/main_btn_to_anim_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_view_margin"
        android:text="@string/main_btn_to_anim_8_text"/>

</LinearLayout>