<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anim_7_SharedElement">

    <ImageView
        android:id="@+id/anim_7_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/horse0"
        android:layout_gravity="center"
        android:transitionName="@string/main_to_anim_7_iv_transition_name"/>

    <Button
        android:id="@+id/anim_7_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/anim_7_btn_margin"
        android:text="@string/anim_7_btn_text"
        android:transitionName="@string/main_to_anim_7_btn_transition_name" />

</FrameLayout>